<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Daniel Bermudez
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>

    <string name="app_name">FiFi</string>
    <string name="action_settings">Settings</string>
    <string name="choose_players">Choose the number of players:</string>
    <string name="btn_3_players">3 Players</string>
    <string name="btn_4_players">4 Players</string>
    <string name="btn_5_players">5 Players</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="wildcard">Wildcard</string>
    <string name="preference_file_key">com.bermudi.fifi.TeamsAndSettings</string>
    <string name="empty">Rafa Es Puto</string>
    <string name="title_activity_edit_teams">Edit Teams</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_teams">Edit Teams</string>

</resources>
