<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/player1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest4" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/player2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest5" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest8" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/player3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest9" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest11" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest12" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wildcard"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest13" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest15" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:minWidth="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/crest16" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>